--- a/task.html
+++ b/task.html
@@ -4,6 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Date Converter</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+        margin: 0;
+        padding: 20px;
+      }
+
+      h1 {
+        color: #333333;
+        text-align: center;
+      }
+
+      p {
+        color: #666666;
+        text-align: center;
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+      }
+
+      label {
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      input[type="text"] {
+        padding: 8px;
+        width: 200px;
+        border: 1px solid #cccccc;
+      }
+
+      input[type="submit"] {
+        padding: 8px 20px;
+        margin-top: 10px;
+        background-color: #333333;
+        color: #ffffff;
+        border: none;
+        cursor: pointer;
+      }
+
+      input[type="submit"]:hover {
+        background-color: #555555;
+      }
+
+      div {
+        margin-top: 20px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <h1>Date Converter</h1>
