--- a/task.html
+++ b/task.html
@@ -78,7 +78,6 @@
           event.preventDefault();
           const date = document.getElementById("date").value;
 
-          // Construct the URL with form values
           const apiUrl = `https://www.hebcal.com/converter?cfg=json&date=${date}&g2h=1&strict=1`;
 
           fetch(apiUrl)
@@ -86,7 +85,7 @@
               return response.json();
             })
             .then(function (data) {
-              const hebrewDate = data.hebrew; // Replace 'yourDesiredKey' with the actual key name from the API response
+              const hebrewDate = data.hebrew;
               document.getElementById("response").innerText = hebrewDate;
             })
             .catch(function (error) {
